--- a/style.css
+++ b/style.css
@@ -1,6 +1,33 @@
 header {
     background-color: rgb(2, 43, 27);
 }
-h1, h2 {
+
+body {
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
+}
+
+h1 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 3em;
+    padding: 60px;
+    text-align: center;
+}
+
+.sub {
+    padding-left: 7px;
+}
+
+
+main {
+    background-color: rgb(171, 97, 14);
+    width: 100%;
+    height: 100%;
+}
+
+h2 {
+    text-align: center;
+    font-family: cursive, Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 2.5em;
+    padding: 20px;
 }
