Make header flexbox

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 header {
     background-color: rgb(2, 43, 27);
+    display: flex;
 }
 
 body {
@@ -14,10 +15,10 @@ h1 {
     text-align: center;
 }
 
-.sub {
-    padding-left: 7px;
+h2 {
+    padding: 5px 10px 5px 10px;
+    font-size: medium;
 }
-
 
 main {
     background-color: rgb(171, 97, 14);
@@ -25,7 +26,7 @@ main {
     height: 100%;
 }
 
-h2 {
+h3 {
     text-align: center;
     font-family: cursive, Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2.5em;
