Create main body flexbox

--- a/style.css
+++ b/style.css
@@ -1,11 +1,47 @@
-header {
-    background-color: rgb(2, 43, 27);
-    display: flex;
-}
-
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
+}
+
+/* Primary Header */
+#header {
+    margin: 2rem;
+}
+
+.primary-header {
+    align-items: center;
+    justify-content: space-between;
+}
+
+.primary-navigation {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.primary-navigation a {
+    text-decoration: none;
+}
+
+.primary-navigation a > span {
+    font-weight: 700;
+    margin-inline-end: .75em;
+}
+
+@media (max-width: 35em) {
+    .primary-navigation {
+        position: fixed;
+        inset: 0 0 0 30%;
+        background: steelblue;
+    }
+}
+
+
+/*Header CSS*/
+header {
+    background-color: rgb(2, 43, 27);
+
+    
 }
 
 h1 {
@@ -15,10 +51,21 @@ h1 {
     text-align: center;
 }
 
+img {
+    width: 250px;
+    height: 200px;
+}
+
 h2 {
     padding: 5px 10px 5px 10px;
     font-size: medium;
+    text-align: center;
+    align-self: flex-end;
 }
+
+
+
+/*Main body CSS*/
 
 main {
     background-color: rgb(171, 97, 14);
@@ -32,3 +79,34 @@ h3 {
     font-size: 2.5em;
     padding: 20px;
 }
+
+/* Flexbox container/item for main */
+
+.flexbox-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+.flexbox-item {
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.flexbox-item-1 {
+     min-height: 100px;
+}
+
+.flexbox-item-1 {
+    min-height: 200px;
+}
+
+.flexbox-item-1 {
+    min-height: 300px;
+}
+
+
